Perf improvements (#179)
* perf improvements

* catalog sync integration test added